syntax = "proto3";

package com.wabenet.dodo.plugin.v1alpha1;

option go_package = "github.com/wabenet/dodo-core/api/plugin/v1alpha1";

message PluginName {
  string type = 1;
  string name = 2;
}

message PluginInfo {
  PluginName name = 1;
  repeated PluginName dependencies = 2;
  map<string, string> fields = 3;
}

message InitPluginResponse {
  map<string, string> config = 1;
}

message InputData {
  bytes data = 1;
}

message OutputData {
  enum Channel {
    INVALID = 0;
    STDOUT = 1;
    STDERR = 2;
  }

  Channel channel = 1;
  bytes data = 2;
}

message StreamInputRequest {
  oneof input_request_type {
    InitialStreamInputRequest initial_request = 1;
    InputData input_data = 2;
  }
}

message InitialStreamInputRequest {
  string id = 1;
}

message StreamOutputRequest {
  string id = 1;
}
